Fix header spacing for iOS

--- a/h5p-bildetema/src/components/LanguageDropdown/LanguageDropdown.module.scss
+++ b/h5p-bildetema/src/components/LanguageDropdown/LanguageDropdown.module.scss
@@ -29,7 +29,7 @@
   display: flex;
   font-size: $font-size-18;
   gap: $spacing--8;
-  padding: 0.5rem 1rem;
+  padding: 0.25rem 0.5rem;
 
   &:hover {
     box-shadow: 0 0 0 2px #fff;
@@ -38,6 +38,10 @@
   &:focus {
     outline: $outline-on-dark-background !important;
     outline-offset: 2px;
+  }
+
+  @include breakpoint-min($x-small) {
+    padding: 0.5rem 1rem;
   }
 }
 
